--- a/app/views/hmcts-a/guidance1.html
+++ b/app/views/hmcts-a/guidance1.html
@@ -16,7 +16,7 @@
     <div class="column-two-thirds">
         <h1 class="intra-h1 guidance-h1">Guidance &amp; forms</h1>
       <h2 class="heading-small guidance-h2">General guidance: A-Z</h2>
-      <p>Find information on LAA's and MoJ's policies and processes.</p>
+      <p>Find information on HMCTS and MoJ's policies and processes.</p>
     </div>
   </div>
   <div class="grid-row">
@@ -63,88 +63,7 @@
 
   </div>
 
-  <div class="grid-row second-row">
-    <div class="column-two-thirds">
-      <h2 class="heading-small guidance-h2">Case management</h2>
-      <p>Find SOPs and desk aids relating to case management.</p>
-    </div>
-  </div>
-  <div class="grid-row third-row">
-    <div class="column-third guidance">
 
-    <h3 class="category-title with-children">
-      <a href="/intra-a/civil/">Civil</a>
-    </h3>
-
-    <ul class="children-list">
-      <li class="child-item">
-        <h4 class="child-title">
-          <a href="/intra-a/civil/guidance">Civil guidance</a>
-        </h4>
-      </li>
-      <li class="child-item">
-        <h4 class="child-title">
-          <a href="/intra-a/civil/sops">Civil SOPs</a>
-        </h4>
-      </li>
-      <li class="child-item">
-        <h4 class="child-title">
-          <a href="/intra-a/civil/desk-aids">Civil desk aids</a>
-        </h4>
-      </li>
-    </ul>
-
-    </div>
-    <div class="column-third guidance">
-      <h3 class="category-title with-children">
-        <a href="/intra-a/crime/">Crime</a>
-      </h3>
-
-      <ul class="children-list">
-        <li class="child-item">
-          <h4 class="child-title">
-            <a href="/intra-a/crime/guidance">Crime guidance</a>
-          </h4>
-        </li>
-        <li class="child-item">
-          <h4 class="child-title">
-            <a href="/intra-a/crime/sops">Crime SOPs</a>
-          </h4>
-        </li>
-        <li class="child-item">
-          <h4 class="child-title">
-            <a href="/intra-a/crime/desk-aids">Crime desk aids</a>
-          </h4>
-        </li>
-      </ul>
-
-    </div>
-    <div class="column-third guidance">
-
-    <h3 class="category-title with-children">
-      <a href="/intra-a/general">General</a>
-    </h3>
-
-    <ul class="children-list">
-      <li class="child-item">
-        <h4 class="child-title">
-          <a href="/intra-a/general/guidance">General guidance</a>
-        </h4>
-      </li>
-      <li class="child-item">
-        <h4 class="child-title">
-          <a href="/intra-a/general/sops">General SOPs</a>
-        </h4>
-      </li>
-      <li class="child-item">
-        <h4 class="child-title">
-          <a href="/intra-a/general/desk-aids">General desk aids</a>
-        </h4>
-      </li>
-    </ul>
-
-    </div>
-  </div>
 
 </main>
 
