--- a/app/views/hmcts-a/work/civil/forms.html
+++ b/app/views/hmcts-a/work/civil/forms.html
@@ -12,10 +12,13 @@
       <li class="breadcrumb-item "><a href="/hmcts-a/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/hmcts-a/guidance1" class="breadcrumb-link">Guidance and forms</a>
+      <li class="breadcrumb-item current"><a href="/hmcts-a/my-work2" class="breadcrumb-link">My work</a>
         <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current">HR
+      <li class="breadcrumb-item current"><a href="/hmcts-a/my-work2/civil" class="breadcrumb-link">Civil</a>
+        <span class="separator"></span>
+      </li>
+      <li class="breadcrumb-item current">Forms
 
       </li>
     </ul>
@@ -26,67 +29,25 @@
       <div class="left-hand-navigation">
 
             <ul>
-              <li class="main-section"><a href="/hmcts-a/guidance1">Guidance &amp; forms</a></li>
-              <li class="parent-section"><a href="/hmcts-a/hr/">HR</a></li>
+              <li class="main-section"><a href="/hmcts-a/my-work2">My work</a></li>
+              <li class="parent-section agency-page"><a href="/hmcts-a/work/civil">Civil</a></li>
 
-              <li class="child">
-                <a href="#">Sick absence</a>
+              <li class="child agency-page">
+                <a href="#">Forms</a>
               </li>
               <li class="child agency-page">
-                <a href="/hmcts-a/hr/performance-management">Performance management Information Hub (HMCTS)</a>
+                <a href="#">SOPs - Civil</a>
               </li>
-              <li class="child">
-                <a href="#">Voluntary Early Redundancy (VEDS)</a>
+              <li class="child agency-page">
+                <a href="#">Policies and procedures</a>
               </li>
-              <li class="child">
-                <a href="/hmcts-a/hr/flexible-working">Flexible working</a>
+              <li class="child agency-page">
+                <a href="/hmcts-a/hr/flexible-working">Programmes and projects</a>
               </li>
-              <li class="child">
-                <a href="#">Organisational change framework</a>
-              </li>
-              <li class="child">
-                <a href="#">Customer service</a>
-              </li>
-              <li class="child">
-                <a href="#">Recruitment</a>
-              </li>
-              <li class="child">
-                <a href="#">End or change employment</a>
-              </li>
-              <li class="child">
-                <a href="/hmcts-a/hr/leave">Leave</a>
-              </li>
-              <li class="child">
-                <a href="/hmcts-a/hr/pay">Pay and benefits</a>
-              </li>
-              <li class="child">
-                <a href="#">Induction</a>
-              </li>
-              <li class="child">
-                <a href="#">Corporate performance group (CPG)</a>
-              </li>
-              <li class="child">
-                <a href="#">Non-Phoenix access</a>
-              </li>
-              <li class="child">
-                <a href="#">Pensions</a>
-              </li>
-              <li class="child">
-                <a href="#">Phoenix</a>
-              </li>
-              <li class="child">
-                <a href="#">Learning and development</a>
-              </li>
-              <li class="child">
-                <a href="#">Contact shared services</a>
+              <li class="child agency-page">
+                <a href="#">Use of email in civil and family courts</a>
               </li>
 
-              <li class="child">
-                <a href="#">Conduct and behaviour</a>
-              </li>
-              <li class="child">
-                <a href="#">Change toolkit</a>
-              </li>
 
 
 
