--- a/app/views/hmcts-a/hr/index.html
+++ b/app/views/hmcts-a/hr/index.html
@@ -33,7 +33,7 @@
                 <a href="#">Sick absence</a>
               </li>
               <li class="child agency-page">
-                <a href="/hmcts-a/hr/performance-management">Performance management Information Hub (HMCTS)</a>
+                <a href="/hmcts-a/hr/performance-management">Performance management Information Hub</a>
               </li>
               <li class="child">
                 <a href="#">Voluntary Early Redundancy (VEDS)</a>
