--- a/app/views/hmcts-a/hr/performance-management/index.html
+++ b/app/views/hmcts-a/hr/performance-management/index.html
@@ -34,22 +34,22 @@
 
 
               <li class="child-folder agency-page">
-                <a href="#">Performance Management Information Hub</a>
+                <a href="/hmcts-a/hr/performance-management/">Performance Management Information Hub</a>
               </li>
               <li class="child-level-2 agency-page">
-                <a href="#">Changes to the Performance Management System</a>
+                <a href="/hmcts-a/hr/performance-management/changes">Changes to the Performance Management System</a>
               </li>
               <li class="child-level-2 agency-page">
-                <a href="/hmcts-a/hr/flexible-working">How to complete your PMR</a>
+                <a href="/hmcts-a/hr/performance-management/complete">How to complete your PMR</a>
               </li>
               <li class="child-level-2 agency-page">
-                <a href="#">Standard Setting and Assessing Performance</a>
+                <a href="/hmcts-a/hr/performance-management/standard">Standard Setting and Assessing Performance</a>
               </li>
               <li class="child-level-2 agency-page">
-                <a href="#">Training and tools</a>
+                <a href="/hmcts-a/hr/performance-management/training">Training and tools</a>
               </li>
               <li class="child-level-2 agency-page">
-                <a href="#">Performance Management Monthly Bulletins</a>
+                <a href="/hmcts-a/hr/performance-management/bulletin">Performance Management Monthly Bulletins</a>
               </li>
 
 
