--- a/app/views/hmcts-a/my-work.html
+++ b/app/views/hmcts-a/my-work.html
@@ -22,11 +22,11 @@
   </div>
   <div class="grid-row">
     <div class="column-third guidance my-work">
-      <h3 class="category-title with-children"><a href="#">Civil</a></h3>
+      <h3 class="category-title with-children"><a href="/hmcts-a/work/civil/">Civil</a></h3>
       <ul class="children-list">
         <li class="child-item">
           <h4 class="child-title">
-            <a href="/intra-a/work/civil/forms">Forms</a>
+            <a href="/hmcts-a/work/civil/forms">Forms</a>
           </h4>
         </li>
         <li class="child-item">
