--- a/app/views/hmcts-a/hr/performance-management/complete.html
+++ b/app/views/hmcts-a/hr/performance-management/complete.html
@@ -43,13 +43,13 @@
                 <a href="/hmcts-a/hr/performance-management/complete">How to complete your PMR</a>
               </li>
               <li class="child-level-2 agency-page">
-                <a href="#">Standard Setting and Assessing Performance</a>
+                <a href="/hmcts-a/hr/performance-management/standard">Standard Setting and Assessing Performance</a>
               </li>
               <li class="child-level-2 agency-page">
-                <a href="#">Training and tools</a>
+                <a href="/hmcts-a/hr/performance-management/training">Training and tools</a>
               </li>
               <li class="child-level-2 agency-page">
-                <a href="#">Performance Management Monthly Bulletins</a>
+                <a href="/hmcts-a/hr/performance-management/bulletin">Performance Management Monthly Bulletins</a>
               </li>
 
 
