--- a/app/views/hmcts-a/work/civil/index.html
+++ b/app/views/hmcts-a/work/civil/index.html
@@ -58,7 +58,7 @@
     <div class="column-two-thirds content">
 
 
-      <h1 class="page-title">Civil</h1>
+      <h1 class="page-title">HR</h1>
 
       <div class="page-metadata">
         <ul>
